fix control button not showing up on firefox bug

--- a/src/app/components/window/window.module.css
+++ b/src/app/components/window/window.module.css
@@ -151,7 +151,7 @@
   height: 70%;
   width: auto;
   margin: 1px;
-  filter: drop-shadow(0px 0px 1px #143384);
+  box-shadow: 0px 0px 1px #143384;
 }
 .controlButton:hover {
   height: 70%;
